# bevy_simple_tilemap

./: .editorconfig  Cargo.toml  LICENSE-MIT  README.md  rustfmt.toml  vut.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
examples/: benchmark.rs  flipped.rs  multilayer.rs  render_to_texture.rs  simple.rs  two_tilemaps.rs
src/: bundle.rs  lib.rs  plugin.rs  prelude.rs  tilemap.rs
src/render/: draw.rs  extract.rs  misc.rs  mod.rs  oldmod.rs  ph_tilemap.rs  pipeline.rs  prepare.rs  queue.rs  texture_array_cache.rs  tilemap.vert  tilemap.wgsl
