[package]
name = "bevy_simple_tilemap"
version = "0.15.0"
authors = ["Forb.Jok <forbjok@gmail.com>"]
edition = "2021"
description = "Refreshingly simple tilemap implementation for Bevy Engine."
license = "MIT/Apache-2.0"
repository = "https://github.com/forbjok/bevy_simple_tilemap.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.6.0"
bytemuck = "1.16.1"

[dependencies.bevy]
version = "0.14.0"
default-features = false
features = [
  "bevy_asset",
  "bevy_core_pipeline",
  "bevy_pbr",
  "bevy_render",
  "bevy_sprite",
]

[dev-dependencies.bevy]
version = "0.14.0"
default-features = false
features = ["x11", "png"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = "1.10.0"
