[package]
name = "bevy_simple_tilemap"
version = "0.18.0"
authors = ["Forb.Jok <forbjok@gmail.com>"]
edition = "2024"
description = "Refreshingly simple tilemap implementation for Bevy Engine."
license = "MIT/Apache-2.0"
repository = "https://github.com/forbjok/bevy_simple_tilemap.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.10.0"
bytemuck = "1.24.0"

[dependencies.bevy]
version = "0.18.0-rc.2"
default-features = false
features = [
  "bevy_asset",
  "bevy_core_pipeline",
  "bevy_pbr",
  "bevy_render",
  "bevy_sprite",
  "bevy_window",
]

[dev-dependencies.bevy]
version = "0.18.0-rc.2"
default-features = false
features = ["bevy_text", "gamepad", "png", "wayland", "webgl2", "x11"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = "1.11.0"
